# thinkbook-eink

./: .gitignore  Cargo.toml  LICENSE  README.md  cargo  install.sh  server.toml.example
src/: lib.rs  usb.rs
systemd/: eink-server.service
udev/: 99-thinkbook-eink.rules
